--- a/requirements.txt
+++ b/requirements.txt
@@ -8,24 +8,34 @@ beautifulsoup4==4.12.2
 blinker==1.6.2
 boto3==1.26.142
 botocore==1.29.142
+Brotli==1.1.0
+build==1.0.3
+CacheControl==0.13.1
 cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 chromedriver-autoinstaller==0.6.2
+cleo==2.1.0
 click==8.1.3
 cmdstanpy==1.1.0
 colorama==0.4.6
 contourpy==1.0.7
 convertdate==2.4.0
+crashtest==0.4.1
+cryptography==41.0.7
 cycler==0.11.0
 decorator==5.1.1
 discord.py==2.3.1
+distlib==0.3.8
+dulwich==0.21.7
 entrypoints==0.4
 enum-compat==0.0.3
 ephem==4.1.4
 et-xmlfile==1.1.0
 exceptiongroup==1.1.2
+fastjsonschema==2.19.0
+filelock==3.13.1
 fire==0.5.0
 Flask==2.3.2
 fonttools==4.39.3
@@ -44,12 +54,16 @@ httplib2==0.22.0
 idna==3.4
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
+inflate64==0.3.1
 instagram-basic-display==1.2.0
+installer==0.7.0
 itsdangerous==2.1.2
+jaraco.classes==3.3.0
 Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.2.0
 jsonschema==4.17.3
+keyring==24.3.0
 kiwisolver==1.4.4
 korean-lunar-calendar==0.3.1
 libesedb-python==20230318
@@ -59,8 +73,11 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 mdurl==0.1.2
+more-itertools==10.1.0
 mplcursors==0.5.2
+msgpack==1.0.7
 multidict==6.0.4
+multivolumefile==0.2.3
 numpy==1.24.3
 oauth2client==4.1.3
 oauthlib==3.2.2
@@ -71,15 +88,25 @@ packaging==23.1
 pandas==2.0.1
 pandas-datareader==0.10.0
 pdf2docx==0.5.6
+pexpect==4.9.0
 Pillow==9.5.0
+pkginfo==1.9.6
+platformdirs==3.11.0
+poetry==1.7.1
+poetry-core==1.8.1
+poetry-plugin-export==1.6.0
 prettytable==3.7.0
 prophet==1.1.3
 protobuf==3.20.3
 psutil==5.9.5
+ptyprocess==0.7.0
+py7zr==0.20.6
 pyarrow==12.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pybcj==1.0.1
 pycparser==2.21
+pycryptodomex==3.19.0
 pydeck==0.8.1b0
 PyDrive==1.3.1
 pydub==0.25.1
@@ -88,8 +115,11 @@ Pygments==2.15.1
 PyMeeus==0.5.12
 Pympler==1.0.1
 PyMuPDF==1.22.3
+pyOpenSSL==23.3.0
 pyparsing==3.0.9
 PyPDF2==3.0.1
+pyppmd==1.0.0
+pyproject_hooks==1.0.0
 pyrsistent==0.19.3
 PySimpleGUI==4.60.4
 PySocks==1.7.1
@@ -100,9 +130,13 @@ python-registry==1.3.1
 pytrends==4.9.2
 pytz==2023.3
 pywin32==306
+pywin32-ctypes==0.2.2
 PyYAML==6.0
+pyzstd==0.15.9
+rapidfuzz==3.5.2
 requests==2.30.0
 requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
 rich==13.3.5
 rsa==4.9
 s3transfer==0.6.1
@@ -110,31 +144,37 @@ scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.12.2
 selenium==4.16.0
+shellingham==1.5.4
 simplejson==3.19.1
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
+speedtest-cli==2.1.3
 streamlit==1.22.0
 streamlit-echarts==0.4.0
 tenacity==8.2.2
 termcolor==2.3.0
+texttable==1.6.7
 threadpoolctl==3.1.0
 tkcalendar==1.6.1
 toml==0.10.2
+tomlkit==0.12.3
 toolz==0.12.0
 tornado==6.3.2
 tqdm==4.65.0
 trio==0.22.1
 trio-websocket==0.10.3
+trove-classifiers==2023.11.29
 typing_extensions==4.6.2
 tzdata==2023.3
 tzlocal==5.0.1
 unicodecsv==0.14.1
 uritemplate==4.1.1
-urllib3==1.26.16
+urllib3==2.1.0
 validators==0.20.0
+virtualenv==20.25.0
 Wand==0.6.11
 watchdog==3.0.0
 wcwidth==0.2.6
