--- a/requirements.txt
+++ b/requirements.txt
@@ -17,18 +17,22 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 chromedriver-autoinstaller==0.6.2
 cleo==2.1.0
-click==8.1.3
+click==8.1.7
 cmdstanpy==1.1.0
 colorama==0.4.6
 contourpy==1.0.7
 convertdate==2.4.0
 crashtest==0.4.1
 cryptography==41.0.7
+curl-cffi==0.5.10
 cycler==0.11.0
 decorator==5.1.1
 discord.py==2.3.1
 distlib==0.3.8
+duckduckgo_search==4.2
 dulwich==0.21.7
+elastic-transport==8.11.0
+elasticsearch==8.11.1
 entrypoints==0.4
 enum-compat==0.0.3
 ephem==4.1.4
@@ -68,7 +72,7 @@ kiwisolver==1.4.4
 korean-lunar-calendar==0.3.1
 libesedb-python==20230318
 LunarCalendar==0.0.9
-lxml==4.9.2
+lxml==4.9.3
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
@@ -147,6 +151,7 @@ selenium==4.16.0
 shellingham==1.5.4
 simplejson==3.19.1
 six==1.16.0
+slack_sdk==3.26.2
 smmap==5.0.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
